Fix header image scales to remove white spaces

--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -1,3 +1,15 @@
+.header-image {
+  // Make header image take up max 50% of screen height
+  max-height: 50vh;
+  overflow: hidden;
+
+  // Make header image covers full width of screen
+  img {
+    display: block;
+    width: 100%;
+  }
+}
+
 // Assign header styling and padding
 .site-header {
   position: relative;
@@ -76,7 +88,7 @@
   .site-title {
     font-size: 3em;
   }
-  
+
   // Padding above site-description to keep site-title on screen.
   .site-description {
     margin: 0 0 0 1em;
